add update ticket add article with text/photo/document small size